fix: callout - handle longer content with better wrapping
Fixes for:
- The button text wrapping early when the content next to it is longer
and wrapping.
- No spacing between multiple paragraphs in callout.
- Icon within callout button shrinking in some situations.

--- a/blocks/callout/callout.css
+++ b/blocks/callout/callout.css
@@ -36,13 +36,21 @@
 
   .button {
     margin-block-start: 1.5rem;
-
+  
     svg {
       margin-inline-end: 0.5rem;
+      flex-shrink: 0;
+    }
+
+    span {
+      @container callout-wrapper (min-width: 49rem) {
+        width: max-content;
+      }
     }
 
     @container callout-wrapper (min-width: 49rem) {
       margin-block-start: 0;
+      max-width: 30%;
     }
   }
 
@@ -83,6 +91,7 @@
     display: block;
     font-size: var(--spectrum-font-size-300);
     line-height: 1.5;
+    max-width: 75ch;
 
     @container callout-wrapper (min-width: 35.5rem) {
       font-size: var(--spectrum-font-size-400);
@@ -95,6 +104,10 @@
     @container callout-wrapper (min-width: 49rem) {
       font-size: var(--spectrum-font-size-600);
     }
+  }
+
+  span:not(.callout__title) + span {
+    margin-block-start: 0.5rem;
   }
 
   .callout__title {
